<resources>
    <string name="app_name">WE PLAY</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="player_error">Cannot play !! %s</string>
    <string name="action_recycler_view">RecyclerView</string>
    <string name="title_sports">Sports</string>
    <string name="title_entertainment">Entertainment</string>
    <string name="title_films">Films</string>
    <string name="title_animations">Animations</string>
    <string name="title_actions">Actions</string>
    <string name="title_sifi">SiFi</string>
    <string name="title_gaming">Gaming</string>
    <string name="title_musics">Musics</string>
    <string name="title_education">Educations</string>
    <string name="title_funny">Funny</string>
    <string name="title_home">Home</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
